--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,4 @@
-<div class="task">
+<div [ngClass]="{reminder: task.reminder}" class="task" (dblclick)="onToggle(task)">
     <h3>{{task.text}}
         <fa-icon [icon]="faTimes" [ngStyle]="{'color': 'firebrick'}" (click)="onDelete(task)"></fa-icon>
     </h3>
