--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
 <header>
     <h1>{{title}}</h1>
-    <app-button color="teal" text="add" (btnClick)="toggleAddTask()"></app-button>
+    <app-button color="{{showAddTask ? 'firebrick' : 'teal' }}"
+        text="{{showAddTask ? 'Close' : 'Add'}}"
+        (btnClick)="toggleAddTask()"></app-button>
 </header>
