--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
 <header>
     <h1>{{title}}</h1>
-    <app-button color="{{showAddTask ? 'firebrick' : 'teal' }}"
+    <app-button
+        *ngIf="hasRoute('/')"
+        color="{{showAddTask ? 'firebrick' : 'teal' }}"
         text="{{showAddTask ? 'Close' : 'Add'}}"
         (btnClick)="toggleAddTask()"></app-button>
 </header>
